--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
   "name": "enable-absolute-paths",
   "version": "0.0.0",
-  "description": "> Enable absolute paths in a TypeScript project",
-  "keywords": [],
+  "description": "Enable absolute paths in a TypeScript project",
+  "keywords": [
+    "absolute paths"
+  ],
   "license": "MIT",
-  "author": "",
+  "author": "sajmoni",
   "type": "module",
-  "main": "dist/index.js",
   "bin": "dist/index.js",
   "files": [
     "dist/"
   ],
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && tsc",
+    "test": "npm run build && chmod +x dist/index.js && vitest"
   },
   "prettier": "prettier-config-one",
   "devDependencies": {
+    "@types/node": "20.3.1",
+    "execa": "7.1.1",
+    "get-bin-path": "10.0.0",
     "prettier": "2.8.8",
     "prettier-config-one": "0.1.1",
+    "tempy": "3.0.0",
     "tsconfig-one": "0.0.8",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "vitest": "0.32.2"
   },
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "load-json-file": "7.0.1",
+    "type-fest": "3.12.0"
   }
 }
