--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "test": "npm run build && chmod +x dist/index.js && vitest"
+    "test": "npm run build && chmod +x dist/index.js && vitest",
+    "release": "npm run build && np"
   },
   "prettier": "prettier-config-one",
   "devDependencies": {
     "@types/node": "20.3.1",
     "execa": "7.1.1",
     "get-bin-path": "10.0.0",
+    "np": "8.0.4",
     "prettier": "2.8.8",
     "prettier-config-one": "0.1.1",
     "tempy": "3.0.0",
