--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "release": "npm run build && np",
+    "release": "npm run build && np --no-tests",
     "test": "npm run build && chmod +x dist/index.js && vitest"
   },
   "prettier": "prettier-config-one",
